# git-mirrors

./: .clang-format  .clangd  .containerignore  .deadcode-out  .dockerignore  .domains  .drone.yml  .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .gitreview  .golangci.yml  .npmrc  .packwizignore  .phpcs.xml  .prettierrc.json  .tianguan.example.sh  .tianguan.sh  .woodpecker.exo.yaml  .woodpecker.exo.yml  .woodpecker.yml  404.html  AGREEMENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIB.md  CREDITS.md  Caddyfile  Cargo.toml  CategoryWatch.i18n.php  CategoryWatch.php  Chart.i18n.magic.php  Containerfile  DECISION-MAKING.md  Dockerfile  Dockerfile.rootless  (+81 more)
.cargo/: config.toml
.github/: dependabot.yml
.phan/: config.php
.woodpecker/: bind.yaml  bird.yaml  build-bind.yaml  build-bird.yaml  build-caddy.yaml  build-dns-root-zone.yaml  build-dns-zones.yaml  build-mariadb.yaml  build-mediawiki-php.yaml  build-ntfy.yaml  build-podman.yaml  build-populus.yaml  build-postgres.yaml  build-x86.yaml  build.yaml  caddy.yaml  caddy.yml  mediawiki-src.yml  mediawiki.yml  ntfy.yaml  push-dns.yaml  update.yaml
@types/: http-signature.d.ts
A/: A.crt  A.key
ViaFabricPlus/: settings.json
activitystreams-derive/: Cargo.toml  README.md
activitystreams-derive/src/: lib.rs
activitystreams-ext/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.arm64v8  README.md  build.sh
activitystreams-ext/examples/: public_key.rs
activitystreams-ext/src/: ext1.rs  ext2.rs  ext3.rs  ext4.rs  lib.rs
activitystreams-kinds/: Cargo.toml
activitystreams-kinds/src/: lib.rs
activitystreams-traits/: Cargo.toml  README.md
activitystreams-traits/src/: activity.rs  actor.rs  collection.rs  error.rs  lib.rs  link.rs  object.rs  properties.rs
activitystreams-types/: Cargo.toml  README.md
activitystreams-types/src/: custom_props.rs  lib.rs
activitystreams-types/src/activity/: accept.rs  add.rs  amove.rs  announce.rs  arrive.rs  block.rs  create.rs  delete.rs  dislike.rs  flag.rs  follow.rs  ignore.rs  invite.rs  join.rs  kind.rs  leave.rs  like.rs  listen.rs  mod.rs  offer.rs  properties.rs  question.rs  read.rs  reject.rs  remove.rs  tentative_accept.rs  tentative_reject.rs  travel.rs  undo.rs  update.rs  view.rs
activitystreams-types/src/actor/: kind.rs  mod.rs
activitystreams-types/src/collection/: kind.rs  mod.rs  properties.rs
activitystreams-types/src/link/: kind.rs  mod.rs  properties.rs
activitystreams-types/src/object/: kind.rs  mod.rs  properties.rs
activitystreams-types/src/primitives/: length.rs  mime_media_type.rs  mod.rs  rdf_lang_string.rs  xsd_any_uri.rs  xsd_datetime.rs  xsd_duration.rs  xsd_float.rs  xsd_non_negative_float.rs  xsd_non_negative_integer.rs  xsd_string.rs
ansible/: hosts.yaml  push-bird-conf.yaml  push-salt-conf.yaml  push-salt-minion.yaml
ap/: consts.ts  delivery.ts  resolver.ts
app/: Cargo.toml  build.gradle.kts  proguard-rules.pro
app/src/: assets.rs  licenser.rs  main.rs  mythware.rs  powershadow.rs  updater.rs  utils.rs  worker.rs
app/src/assets/: MAS_AIO.cmd  update.sh
app/src/c/src/sec/: sec.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/org/eu/xtexx/mcbeaa/: MainHooks.kt
app/src/main/java/org/eu/xtexx/mcbeaa/hooks/: BaseHook.kt  ServerManagedPolicyHook.kt
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/sec/: antianaly.rs  c.rs
assets/: go-licenses.json  message-auto-return.js
aut-num/: 4244310001.json5  4244310001.yaml  4244310002.yaml  4244314431.json5  4244314431.yaml  AS4244314431.json5
bind/: Containerfile
bird/: Containerfile  bird.conf.j2  cn.conf.j2  community.cn.conf.j2  community.conf.j2  dn42.conf.j2  dn42.grc.conf.j2  init.sls  macros.roa.conf.j2  prefixes.conf.j2  prefixes.dn42.conf.j2  prefixes.xvnet.conf.j2  roa.conf.j2
branding/: README.md
ca/: intermediate_ca.crt  root.crt  root_cross_sign.csr  (+2 more)
license/: Cargo.toml
license/examples/: genkey.rs  gensudo.rs  licenseinfo.rs
license/src/: lib.rs
lydia-worker/: Cargo.toml
lydia-worker/src/: discord.rs  env.rs  main.rs  report.rs  secrets.rs
lydia-worker/src/tf/: mod.rs
lydia-worker/src/tf/lomp/: mod.rs  mpc.rs
lydia-worker/src/util/: translation.rs
lydia-worker/templates/: lomp_report.html
odino/: Cargo.toml  build.rs
odino/frontend/assets/: base.css  core.css
odino/frontend/base/: navigation.hbs
odino/frontend/error/: 401.hbs  404.hbs  default.hbs
odino/frontend/page/: register.hbs
odino/src/: main.rs
odino/src/database/: schema.rs
odino/src/database/migrations/: 0002-basic.sql
odino/src/idp/: mod.rs
odino/src/idp/password/: hash.rs
odino/src/server/: embed.rs  frontend.rs  register.rs
odino/src/user/: group.rs
osdev/: Cargo.toml
osdev/src/: categorize_redir.rs  consts.rs  main.rs  uncatredir.rs
peerd-legacy/: .gitignore  Cargo.toml
peerd-legacy/src/: args.rs
peerd-legacy/src/action/: apply.rs
peerd-legacy/src/config/: routing.rs
peerd-legacy/src/config/tunnel/: mod.rs
peerd-legacy/src/peer_conf/: tunnel.rs
peerd-legacy/src/tunnel/: mod.rs
peerd-legacy/src/tunnel/wireguard/: linux.rs
peerd-legacy/src/zone/reader/: dir.rs  mod.rs  tar.rs
spica-signer/: Cargo.toml  spica-signer.toml
spica-signer-common/: Cargo.toml
spica-signer-common/src/: lib.rs  req.rs
spica-signer/src/: acl.rs  cert.rs  config.rs  csr.rs  lib.rs  log.rs  main.rs  openssl.rs  role.rs
spica-signer/src/log/: mod.rs  ntfy.rs
spica-signer/src/routes/: auth.rs  mod.rs  nodeinfo.rs  sign.rs
spica-signer/templates/: index.html  index.html.j2
spica/spica-signer/: Cargo.toml  test.sh
spica/spica-signer-common/: Cargo.toml
spica/spica-signer-common/src/: req.rs  sign.rs
spica/spica-signer/src/: acl.rs  cert.rs  lib.rs  main.rs  role.rs
spica/spica-signer/src/routes/: auth.rs
spica/spica-signer/templates/: index.html.j2
yjqyapi/: Cargo.toml
yjqyapi/examples/: dump_all_infoqueries.rs
yjqyapi/src/: changelog.rs  error.rs  infoquery.rs  lib.rs  partners.rs
(+2421 files in other folders)
