[package]
name = "yjyz-tools"
description = "阳江一中实用工具"
version = "0.2.15"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://codeberg.org/xtex/yjyz-tools"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
bincode = "1.3.3"
bitflags = { version = "2.6.0", features = ["serde", "std"] }
cached = "0.53.1"
ed25519-dalek = { version = "2.1.1", features = ["pem"] }
educe = "0.6.0"
eframe = { version = "0.29.1", default-features = false, features = ["glow", "accesskit"] }
egui = { version = "0.29.1", default-features = false }
env_logger = "0.11.5"
hex = "0.4.3"
hex-literal = "0.4.1"
log = { version = "0.4.22", features = ["std"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
phf = { version = "0.11.2", features = ["macros"] }
raw-window-handle = { version = "0.6.2", features = ["std"] }
reqwest = { version = "0.12.8", features = ["native-tls", "json"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.128"
sha2 = "0.10.8"
sysinfo = "0.31.4"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v7"] }
windows-registry = "0.3.0"
windows-targets = "0.52.6"
xz2 = "0.1.7"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
]

[build-dependencies]
cmake = "0.1.51"
winresource = "0.1.17"

[dev-dependencies]
rand = "0.8.5"
ed25519-dalek = { version = "^2", features = ["rand_core"] }

[package.metadata.winresource]
OriginalFilename = "yjyz-tools.exe"

[package.metadata.release]
allow-branch = ["main"]
pre-release-commit-message = "chore: Release version {{version}}"
tag-message = "Release {{version}}"
publish = false
