[package]
name = "build-clean"
version = "1.6.0"
edition = "2021"
license = "Apache-2.0"
description = "Clean all build caches on your disk!"
homepage = "https://codeberg.org/xtex/build-clean"
repository = "https://codeberg.org/xtex/build-clean.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-recursion = "1.1"
crossterm = "0.28"
cursive = { version = "0.21", features = ["crossterm-backend"] }
cursive-async-view = "0.8"
globset = "0.4.15"
mlua = { version = "0.10", features = ["lua54", "send", "serialize", "macros"] }
num_cpus = "1.16"
owo-colors = "4.1"
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full", "tracing"] }

[package.metadata.docs.rs]
features = ["mlua/vendored"]
rustdoc-args = ["--cfg", "docsrs"]
