[package]
name = "activitystreams-derive"
description = "Derive macros for activitystreams"
version = "0.4.0-alpha.2"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://git.asonix.dog/Aardwolf/activitystreams"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]
edition = "2018"

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
proc-macro = true
