[package]
name = "activitystreams-kinds"
description = "Type-safe activitystreams 'type' values"
version = "0.1.2"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/activitystreams"
documentation = "https://docs.rs/activitystreams-ext"
keywords = ["activitystreams", "activitypub"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
url = "2"

[dev-dependencies]
anyhow = "1"
serde_json = "1"
