[package]
name = "activitystreams-kinds"
description = "Type-safe activitystreams 'type' values"
version = "0.3.0"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/asonix/activitystreams"
documentation = "https://docs.rs/activitystreams-ext"
keywords = ["activitystreams", "activitypub"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["url"]

[dependencies]
serde = { version = "1", features = ["derive"] }
url = { version = "2", optional = true }
iri-string = { version = "0.7.0", optional = true }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
