[package]
name = "activitystreams-traits"
description = "Traits for ActivityStreams objects"
version = "0.2.0"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://git.asonix.dog/Aardwolf/activitystreams"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde_derive = "1.0"
