[package]
name = "activitystreams-traits"
description = "Traits for ActivityStreams 2.0 objects"
version = "0.3.0"
license = "GPL-3.0"
authors = ["asonix <asonix.dev@gmail.com>"]
repository = "https://git.asonix.dog/Aardwolf/activitystreams"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]
edition = "2018"

[dependencies]
typetag = "0.1.4"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
