[package]
name = "activitystreams-types"
description = "Base types from the Activity Streams spec"
version = "0.4.0-alpha.0"
license = "GPL-3.0"
authors = ["asonix <asonix@asonix.dog>"]
repository = "https://git.asonix.dog/Aardwolf/activitystreams"
readme = "README.md"
keywords = ["activitystreams", "activitypub"]
edition = "2018"

[dependencies]
thiserror = "1.0.11"
activitystreams-derive = { version = "0.4.0-alpha.0", path = "../activitystreams-derive" }
activitystreams-traits = { version = "0.4.0-alpha.0", path = "../activitystreams-traits" }
chrono = { version = "0.4", features = ["serde"] }
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.1.4"
url = "2.1"

[dev-dependencies]
anyhow = "1.0"
