[package]
name = "lydia-worker"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
askama = { version = "0.12.0", features = ["with-axum"] }
axum = { version = "0.6.18", features = ["ws"] }
hostname = "0.3.1"
mwbot = "0.5.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
webhook = "2.1.2"
