[package]
name = "psibot-osdev"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap.workspace = true
mwbot.workspace = true
regex.workspace = true
tokio.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
