[package]
name = "peerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
lazy_static = "1.4.0"
anyhow = { version = "1.0.62", features = ["backtrace"] }
tar = "0.4.38"
may = "0.3.22"
inotify = "0.10.0"
wireguard-uapi = { version = "2.0.5", features = ["xplatform"] }
base64 = "0.13.0"
