[package]
name = "spica-signer-common"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.69"
totp-rs = { version = "4.2.0", optional = true }

[features]
default = ["std"]
std = ["sign"]
sign = ["dep:totp-rs"]
