[package]
name = "spica-signer"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
actix-web = "4.3.0"
anyhow = { version = "1.0.69", features = ["backtrace"] }
lazy_static = "1.4.0"
openssl = "0.10.45"
reqwest = { version = "0.11.14", features = ["tokio-util", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
