[package]
name = "spica-signer"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.2.1"
axum = { version = "0.6.7", features = ["headers", "http2"] }
josekit = "0.8.2"
lazy_static = "1.4.0"
openssl = "0.10.45"
picky = "6.3.0"
reqwest = { version = "0.11.14", features = ["tokio-util", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
