[package]
name = "yjqyapi"
version = "0.1.0"
edition = "2021"
description = "A Qiyewang API client library"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
async-trait = "0.1.80"
kuchikiki = "0.8.2"
reqwest = { version = "0.12.3", features = ["charset", "cookies"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.37.0", features = ["macros", "sync"] }
tracing = "0.1.40"
url = "2.5.0"
