[package]
name = "spica-signer-common"
version = "0.2.0"
description = "Utilities to work with spica signer"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"], optional = true }
totp-rs = { version = "4.2.0", optional = true }

[features]
default = ["std"]
std = ["sign", "serde"]
sign = ["dep:totp-rs"]
