[package]
name = "spica-signer"
version = "0.1.0"
description = "The spica signer server"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
askama = { version = "0.11.1", features = ["with-axum"] }
askama_axum = "0.2.1"
axum = { version = "0.6.7", features = ["headers", "http2"] }
axum-auth = "0.4.0"
base64 = "0.21.0"
duration-str = "0.5.0"
lazy_static = "1.4.0"
openssl = "0.10.45"
pem = "1.1.1"
picky-asn1-der = "0.4.0"
picky-asn1-x509 = "0.9.0"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["tokio-util", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
spica-signer-common = { path = "../spica-signer-common" }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
totp-rs = "4.2.0"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["json"] }
